# dude-duck-backend

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  google.json  google2.json  main.py  mypy.ini  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml
app/: api.py  db.py
app/core/: cache.py  config.py  db.py  enums.py  errors.py  exceptions.py  extensions.py  logging.py
app/middlewares/: exception.py  time.py
app/services/accounting/: flows.py  models.py  schemas.py  service.py  views.py
app/services/admin/: views.py
app/services/auth/: flows.py  manager.py  models.py  service.py  utils.py  views.py
app/services/currency/: flows.py  models.py  service.py
app/services/messages/: flows.py  models.py  service.py  views.py
app/services/orders/: flows.py  models.py  schemas.py  service.py  views.py
app/services/permissions/: flows.py  service.py
app/services/pre_orders/: models.py
app/services/preorders/: flows.py  models.py  service.py  tasks.py  views.py
app/services/response/: flows.py  models.py  service.py  views.py
app/services/search/: models.py  service.py
app/services/settings/: flows.py  models.py  service.py  views.py
app/services/sheets/: flows.py  models.py  service.py  tasks.py  views.py
app/services/tasks/: backoff.py  celery_config.py  flows.py  service.py
app/services/telegram/: service.py  views.py
app/services/telegram/channel/: models.py  service.py  views.py
app/services/telegram/message/: flows.py  models.py  service.py  views.py
app/services/telegram/render/: models.py  views.py
app/services/time/: service.py
app/services/users/: flows.py  views.py
data/: Copy order B2B EFT.json  Copy order B2B.json  M+ Booster.json  booster.json
migrations/: env.py
migrations/main/: 0_20231004222927_init.py
migrations/versions/: 2023-10-11_.py  2023-10-26_.py
scripts/: B2B.json  Copy order B2B EFT.json  Copy order B2B.json  M+.json  booster.json  gold.json  order B2B.json
scripts/order/: Classic Era (Vanilla)-cd.j2  DF-cd.j2  DF.j2  eta-price-gold.j2  eta-price.j2  order.j2  pre-eta-price.j2  pre-order.j2  response-check.j2  response.j2
src/: api.py
src/core/: config.py  db.py  enums.py  errors.py  logging.py  pagination.py
src/middlewares/: exception.py
src/models/: __init__.py  accounting.py  auth.py  currency.py  general.py  oauth.py  order.py  payroll.py  preorder.py  response.py  settings.py  users.py
src/models/integrations/: channel.py  message.py  notification.py  render.py  sheets.py  telegram.py
src/schemas/: __init__.py  accounting.py  auth.py  currency.py  order.py  payroll.py  preorder.py  response.py  sheets.py  users.py
src/schemas/integrations/: channel.py  discord.py  message.py  notification.py  render.py  sheets.py  telegram.py
src/services/accounting/: flows.py  models.py  service.py  views.py
src/services/admin/: views.py
src/services/auth/: flows.py  models.py  service.py  tasks.py  utils.py  views.py
src/services/currency/: flows.py  models.py  service.py  views.py
src/services/integrations/bots/: service.py
src/services/integrations/bots/telegram/: notifications.py
src/services/integrations/channel/: flows.py  models.py  service.py  views.py
src/services/integrations/discord/: service.py
src/services/integrations/discord/oauth/: service.py  views.py
src/services/integrations/message/: flows.py  models.py  service.py  views.py
src/services/integrations/notifications/: flows.py  service.py  utils.py
src/services/integrations/render/: flows.py  models.py  service.py  views.py
src/services/integrations/sheets/: flows.py  models.py  service.py  tasks.py  views.py
src/services/integrations/telegram/: service.py
src/services/order/: flows.py  models.py  schemas.py  service.py  views.py
src/services/orders/: flows.py  models.py  schemas.py  service.py  views.py
src/services/payroll/: models.py  service.py
src/services/permissions/: flows.py  service.py
src/services/preorder/: flows.py  models.py  service.py  tasks.py  views.py
src/services/preorders/: flows.py  models.py  service.py  tasks.py  views.py
src/services/response/: flows.py  models.py  service.py  views.py
src/services/screenshot/: flows.py  models.py  service.py  views.py
src/services/search/: service.py
src/services/settings/: flows.py  models.py  service.py  views.py
src/services/sheets/: flows.py  models.py  service.py  tasks.py  views.py
src/services/tasks/: celery_config.py  service.py
src/services/telegram/: models.py  service.py
src/services/telegram/channel/: models.py  views.py
src/services/telegram/message/: flows.py  models.py  service.py  views.py
src/services/telegram/render/: models.py  views.py
src/services/time/: service.py
src/services/users/: flows.py  models.py  views.py
src/utils/: __init__.py  integration.py
tests/: performance.py
