[tool.poetry]
name = "DudeDuck Orders CRM"
version = "2.1"
description = ""
authors = ["CraazzzyyFoxx <craazzzyyfoxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.0.3"}
python-dotenv = "^1.0.0"
dateparser = "^1.1.7"
loguru = "^0.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.28.1"}
fastapi = "^0.103.1"
uvloop = {version = "^0.17.0", platform="linux"}
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.17"
beanie = "^1.20.0"
fastapi-users = {extras = ["beanie"], version = "^12.1.2"}
pydantic-settings = "^2.0.2"
httpx = "^0.25.0"
orjson = "^3.9.4"
deepdiff = "^6.3.1"
flower = "^2.0.1"
redis = "^5.0.0"
asgiref = "^3.7.2"
gunicorn = "^21.2.0"
gspread = "^5.10.0"
setuptools = "^65.1.2"
celery = "^5.3.1"
lxml = "^4.9.3"
websockets = "^11.0.3"
wsproto = "^1.2.0"



[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.287"
isort = "^5.12.0"



[tool.ruff]
line-length = 120

[mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = "True"

[pydantic-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"

[tool.isort]
skip_glob = "**/__init__.pyi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
