[tool.poetry]
name = "DudeDuck Orders CRM"
version = "2.1"
description = ""
authors = ["CraazzzyyFoxx <craazzzyyfoxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.0.3"}
python-dotenv = "^1.0.0"
dateparser = "^1.1.7"
loguru = "^0.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.28.1"}
fastapi = "^0.104"
uvloop = {version = "^0.17.0", platform="linux"}
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.21"
pydantic-settings = "^2.0.2"
httpx = "^0.25.0"
orjson = "==3.9.4"
deepdiff = "^6.6.1"
flower = "^2.0.1"
redis = "^5.0.0"
asgiref = "^3.7.2"
gunicorn = "^21.2.0"
gspread = "^5.12"
setuptools = "^65.1.2"
celery = "^5.3.1"
lxml = "^4.9.3"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
cryptography = "^41.0.5"
ciso8601 = "^2.3.0"
asyncpg = "^0.28.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.287"
isort = "^5.12.0"
types-dateparser = "^1.1.4.10"
black = "^23.9.1"
pyright = "^1.1.330.post0"

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # complexity
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.ruff.mccabe]
# -Unlike
[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
allow_redefinition=true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
skip_glob = "**/__init__.pyi"

[tool.aerich]
tortoise_orm = "app.core.config.tortoise"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
